# poc-web-be-solver

./: README.md  be.py  definitions.json  docker-compose.yml  pyproject.toml  web.py
deploy/: Dockerfile.be  Dockerfile.solver
src/: solver.py
web/: index.js  package-lock.json  package.json
